<resources>
    <string name="app_name">HizliGeliyo.Project</string>
    <string name="title_activity_first">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Login Fragment-->
    <string name="hesabinmiyok">Hesabın yok mu?</string>
    <string name="register">Kaydol</string>
    <string name="girisyap">Giriş yap</string>
    <string name="sifremiunuttum">Şifremi unuttum</string>
    <string name="hintpassword">password</string>
    <string name="hintemail">demo@hizligeliyo.com</string>
    <string name="hesabagirisyap">Hesaba giriş yap</string>
    <string name="title_activity_second">MainActivity</string>

    <!-- button bar-->
    <string name="sirala">Sırala</string>
    <string name="filtre">Filtre</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="searchHint">Kategori veya ürün arama</string>
</resources>