<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.LoginFragment">

    <ImageView
        android:id="@+id/login_fragment_logo"
        android:layout_width="@dimen/imageview_size_normal"
        android:layout_height="@dimen/imageview_size_normal"
        android:layout_marginTop="@dimen/top_margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/login_fragment_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_normal"
        android:text="@string/hesabagirisyap"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/textsize_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_logo" />

    <EditText
        android:id="@+id/login_fragment_emailaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_normal"
        android:text="s@g.c"
        android:background="@drawable/edittext_elactical_shape"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:paddingHorizontal="@dimen/email_edittext_padding_horizontal_normal"
        android:paddingVertical="@dimen/top_margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_textview"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/login_fragment_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_normal"
        android:background="@drawable/edittext_elactical_shape"
        android:hint="@string/hintpassword"
        android:text="123"
        android:textAlignment="center"
        android:paddingHorizontal="@dimen/password_edittext_padding_horizontal_normal"
        android:paddingVertical="@dimen/top_margin_normal"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_emailaddress"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/login_fragment_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_normal"
        android:layout_marginEnd="@dimen/end_margin_normal"
        android:text="@string/sifremiunuttum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_password" />

    <Button
        android:id="@+id/login_fragment_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_elactical_shape"
        android:text="@string/girisyap"
        android:paddingHorizontal="@dimen/button_padding_horizontal_normal"
        android:layout_marginTop="@dimen/top_margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_forgetpassword" />
    <TextView
        android:id="@+id/login_fragment_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_normal"
        android:text="@string/hesabinmiyok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_login_button" />

    <TextView
        android:id="@+id/login_fragment_register_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:layout_marginStart="1dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/login_fragment_textview2"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_login_button" />



</androidx.constraintlayout.widget.ConstraintLayout>